-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 18
-
Component/s: hotspot
-
b25
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8299550 | 17.0.7 | Aleksey Shipilev | P4 | Resolved | Fixed | b01 |
The bug can be reproduced by build zero VM on x86_32
```
Creating jdk/modules/jdk.jpackage/jdk/jpackage/internal/resources/jpackageapplauncher from 3 file(s)
Creating jdk/modules/jdk.jpackage/jdk/jpackage/internal/resources/libjpackageapplauncher.so from 17 file(s)
Compiling 4 files for BUILD_JIGSAW_TOOLS
Optimizing the exploded image
Error occurred during initialization of boot layer
java.lang.module.FindException: Error reading module: /home/jdk/build/linux-x86-zero-release/jdk/modules/java.desktop
Caused by: java.lang.module.InvalidModuleDescriptorException: Package javax.print.attribute not found in module
ExplodedImageOptimize.gmk:39: recipe for target '/home/jdk/build/linux-x86-zero-release/jdk/_optimize_image_exec.marker' failed
make[3]: *** [/home/jdk/build/linux-x86-zero-release/jdk/_optimize_image_exec.marker] Error 1
make/Main.gmk:437: recipe for target 'exploded-image-optimize' failed
make[2]: *** [exploded-image-optimize] Error 2
ERROR: Build failed for target 'images' in configuration 'linux-x86-zero-release' (exit code 2)
Stopping sjavac server
```
```
Creating jdk/modules/jdk.jpackage/jdk/jpackage/internal/resources/jpackageapplauncher from 3 file(s)
Creating jdk/modules/jdk.jpackage/jdk/jpackage/internal/resources/libjpackageapplauncher.so from 17 file(s)
Compiling 4 files for BUILD_JIGSAW_TOOLS
Optimizing the exploded image
Error occurred during initialization of boot layer
java.lang.module.FindException: Error reading module: /home/jdk/build/linux-x86-zero-release/jdk/modules/java.desktop
Caused by: java.lang.module.InvalidModuleDescriptorException: Package javax.print.attribute not found in module
ExplodedImageOptimize.gmk:39: recipe for target '/home/jdk/build/linux-x86-zero-release/jdk/_optimize_image_exec.marker' failed
make[3]: *** [/home/jdk/build/linux-x86-zero-release/jdk/_optimize_image_exec.marker] Error 1
make/Main.gmk:437: recipe for target 'exploded-image-optimize' failed
make[2]: *** [exploded-image-optimize] Error 2
ERROR: Build failed for target 'images' in configuration 'linux-x86-zero-release' (exit code 2)
Stopping sjavac server
```
- backported by
-
JDK-8299550 Zero: Fix _fast_{i,f}access_0 bytecodes handling
-
- Resolved
-
- relates to
-
JDK-8008243 Zero: Implement fast bytecodes
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/298fef70
-
Commit
openjdk/jdk/0a9e76c4
-
Review
openjdk/jdk17u-dev/925
-
Review
openjdk/jdk/6479
(1 links to)