8277485: Zero: Fix _fast_{i,f}access_0 bytecodes handling

Reviewed-by: sgehwolf, shade